FIXED Issue #625- ENHANCEMENT - : Alignment of buttons of the Confirm component on IE 10

--- a/crux-smart-faces/src/main/resources/org/cruxframework/crux/smartfaces/themes/client/common/smartFacesCommon.css
+++ b/crux-smart-faces/src/main/resources/org/cruxframework/crux/smartfaces/themes/client/common/smartFacesCommon.css
@@ -924,7 +924,17 @@ td > div > .faces--group
 	padding:10px;
 	margin:10px -10px -10px;
 	display:flex;
+	display: -ms-flexbox;
+	-ms-flex-pack: justify;
 	justify-content:space-around;
+}
+
+@if user.agent ie10
+{
+	.faces-popup-actionPanel
+	{
+		padding:10px 50px;
+	}
 }
 
 .faces-popup-actionPanel .faces-Button
